<package format="2">
  <name>camera_link_rev</name>
  <version>0.1.0</version>
  <description>
    Reverse transform for the camera link.
  </description>
  <author>Andrey Dvornikov</author>
  <maintainer email="ad@coex.tech">Andrey Dvornikov</maintainer>
  <license>MIT</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
</package>
